docs: update index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Niharika Kesarwani</title>
 </head>
 <body>
-    Hi this is Niharika
+    Hi this is Niharika.
+    I am an engineering final year student.
 </body>
 </html>
