docs: added hobbies

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     I am an engineering final year student.
 
     I have worked on few CLI apps. I'll showcase it here tomorrow.
+
+    I love cycling and singing along with solving maths problems.
 </body>
 
 </html>
