added till links

--- a/index.html
+++ b/index.html
@@ -4,16 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Niharika Kesarwani Hi</title>
+    <title>niharika's component library</title>
 </head>
 
 <body>
-    Hi this is Niharika.
-    I am an engineering final year student.
+    <h1> niharika's component library </h1>
+    <b>Niharika Kesarwani </b>is attending neog.camp.
+    <br><br>
+    <div> This is a component library created to better design each element.</div>
+    <br>
+    <div>After creating this library I am going to use the components in my <b>portfolio, blog and all projects</b> created. 
+    <br>This will ensure that all my projects have <b>consistent themeing and styling</b></div>
 
-    I have worked on few CLI apps. I'll showcase it here tomorrow.
+    <br><hr>
 
-    I love cycling and singing along with solving maths problems.
+    <h2>@typography</h2>
+    <h1>This is the biggest heading</h1>
+    <h2>This is the second biggest heading</h2>
+    <p> This is normal text which will auto fold based on the width.</p>
+    <small>This is a relatively smaller text</small>
+
+    <br><br><hr>
+
+    <h2>@containers</h2>
+    <h3>@fluid container</h3>
+    <div>This is going to be a fluid container. It will go full width of page with some margin.</div>
+
+    <h3>center container</h3>
+    <div>This is going to be a center container. It will go till a given width and center content.</div>
+
+    <br><hr>
+
+    <h2>@links</h2>
+    <a href="/">Primary Link</a>
+    <a href="/">Secondary Link</a>
+
+    <br><br><hr>
+
+    <h2>@lists</h2>
+
 </body>
 
 </html>
