added till footer

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <br><br>
     <div> This is a component library created to better design each element.</div>
     <br>
-    <div>After creating this library I am going to use the components in my <b>portfolio, blog and all projects</b> created. 
-    <br>This will ensure that all my projects have <b>consistent themeing and styling</b></div>
+    <div>After creating this library I am going to use the components in my <b>portfolio, blog and all projects</b>
+        created.
+        <br>This will ensure that all my projects have <b>consistent themeing and styling</b></div>
 
-    <br><hr>
+    <br>
+    <hr>
 
     <h2>@typography</h2>
     <h1>This is the biggest heading</h1>
@@ -24,7 +26,8 @@
     <p> This is normal text which will auto fold based on the width.</p>
     <small>This is a relatively smaller text</small>
 
-    <br><br><hr>
+    <br><br>
+    <hr>
 
     <h2>@containers</h2>
     <h3>@fluid container</h3>
@@ -33,15 +36,86 @@
     <h3>center container</h3>
     <div>This is going to be a center container. It will go till a given width and center content.</div>
 
-    <br><hr>
+    <br>
+    <hr>
 
     <h2>@links</h2>
     <a href="/">Primary Link</a>
     <a href="/">Secondary Link</a>
 
-    <br><br><hr>
+    <br><br>
+    <hr>
 
     <h2>@lists</h2>
+    <h3>unordered lists</h3>
+    <ul>
+        <li>Item one</li>
+        <li>Item two</li>
+        <li>Item three</li>
+    </ul>
+
+    <h3>unordered inline lists</h3>
+    <ul>
+        <li>Inline Item one</li>
+        <li>Inline Item two</li>
+        <li>Inline Item three</li>
+    </ul>
+
+    <h3>reverse ordered lists</h3>
+    <ol>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+    </ol>
+
+    <br>
+    <hr>
+
+    <h2>@nav</h2>
+    <nav>
+        <div>iAmBrand</div>
+        <ul>
+            <li><a href="/">home</a></li>
+            <li><a href="/">products</a></li>
+            <li><a href="/">about</a></li>
+        </ul>
+    </nav>
+
+    <br>
+    <hr>
+
+    <h2>@header</h2>
+    <header>
+        <img src="images/header-image.svg">
+        <h1>heading inside hero</h1>
+    </header>
+
+    <br>
+    <hr>
+
+    <h2>@section</h2>
+    <section>
+        <h3>white section</h3>
+        <p>This will have white background</p>
+    </section>
+
+    <section>
+        <h3>gray section</h3>
+        <p>This will have gray background</p>
+    </section>
+
+    <br>
+    <hr>
+
+    <h2>@footer</h2>
+    <footer>
+        <div>header inside footer</div>
+        <ul>
+            <li>socialOne</li>
+            <li>socialTwo</li>
+            <li>socialThree</li>
+        </ul>
+    </footer>
 
 </body>
 
