--- a/blogs.html
+++ b/blogs.html
@@ -17,8 +17,38 @@
         </ul>
     </nav>
 
-    <header class="hero">
-        <h1 class="hero-heading">my <span class="hero-heading-inverted"> blogs</span></h1>
+     <header class="hero">
+        <img class="hero-img" src="images/header-image.svg">
+        <h1 class="hero-heading">read my <span class="hero-heading-inverted"> blogs</span></h1>
     </header>
+
+    <ul class="lists-non-bullet">
+        <li>
+            <div class=" container-center margin">
+                <h1>dummy blog 2</h1>
+                <small>July 2021</small>
+                <p>This is a dummy blog.</p>
+                <a class="links links-primary" href="/dummyblog.html">Read More</a>
+            </div>
+        </li>
+
+        <li>
+            <div class=" container-center margin">
+                <h1>dummy blog 1</h1>
+                <small>July 2021</small>
+                <p>This is a dummy blog.</p>
+                <a class="links links-primary" href="/dummyblog.html">Read More</a>
+            </div>
+        </li>
+    </ul>
+
+    <footer class="footer">
+        <div class="footer-header">social media presence</div>
+        <ul class="footer-ul-links">
+            <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha">github</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharikatxt">twitter</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani">linkedin</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
