--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,15 @@
             </div>
         </li>
     </ul>
+
+    <footer class="footer">
+        <div class="footer-header">social media presence</div>
+        <ul class="footer-ul-links">
+            <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha">github</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharikatxt">twitter</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani">linkedin</a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
