--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="nav">
-        <div class="nav-brand">niharikakesarwani</div>
+        <div class="nav-brand"><a class="links links-primary" href="/">niharikakesarwani</a></div>
         <ul class="lists-non-bullet nav-pills">
             <li class="lists-item-inline"><a class="links" href="/">home</a></li>
             <li class="lists-item-inline"><a class="links" href="/projects.html">projects</a></li>
