--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,17 @@
 
     <ul class="lists-non-bullet">
         <li>
-            <div class=" container-center margin">
+            <div class="container-center margin">
+                <h1>banana translator</h1>
+                <small>July 2021</small>
+                <p>Use the translator to convert your text from English to Minion/Banana language.</p>
+                <a class="links links-primary" href="https://banana-game.netlify.app">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/banana-game">View Source</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container-center margin">
                 <h1>are u a friends fan?</h1>
                 <small>July 2021</small>
                 <p>Are you a loyal <strong>friends</strong> fan? Let's play a quiz and see.</p>
@@ -36,7 +46,7 @@
         </li>
 
         <li>
-            <div class=" container-center margin">
+            <div class="container-center margin">
                 <h1>how well do you know me?</h1>
                 <small>July 2021</small>
                 <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who
