--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,16 @@
     <ul class="lists-non-bullet">
         <li>
             <div class="container-center margin">
+                <h1>english contraction translator</h1>
+                <small>July 2021</small>
+                <p>use the translatot to translate the English contraction forms (can't, I'm etc) to the expanded forms.</p>
+                <a class="links links-primary" href="https://contraction-translator.netlify.app/">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/english-contraction-translator">View Source</a>
+            </div>
+        </li>
+    
+        <li>
+            <div class="container-center margin">
                 <h1>banana translator</h1>
                 <small>July 2021</small>
                 <p>Use the translator to convert your text from English to Minion/Banana language.</p>
