--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
     
         <li>
             <div class="container-center margin">
-                <h1>banana translator</h1>
+                <h1>minion language translator</h1>
                 <small>July 2021</small>
                 <p>Use the translator to convert your text from English to Minion/Banana language.</p>
                 <a class="links links-primary" href="https://banana-game.netlify.app">Live Project</a>
