--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
             <div class="container-center margin">
                 <h1>english contraction translator</h1>
                 <small>July 2021</small>
-                <p>use the translatot to translate the English contraction forms (can't, I'm etc) to the expanded forms.</p>
+                <p>Use the translator to translate the English contraction forms (can't, I'm etc) to the expanded forms.</p>
                 <a class="links links-primary" href="https://contraction-translator.netlify.app/">Live Project</a>
                 <a class="links links-secondary" href="https://github.com/NiharikaNeha/english-contraction-translator">View Source</a>
             </div>
