added flag-interpreter game

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,17 @@
     </header>
 
     <ul class="lists-non-bullet">
+
+        <li>
+            <div class="container-center margin">
+                <h1>flag interpreter</h1>
+                <small>July 2021</small>
+                <p>Use this application to identify some flags using their emojis.</p>
+                <a class="links links-primary" href="https://xyc9c.csb.app/">Live Project</a>
+                <a class="links links-secondary" href="https://codesandbox.io/s/github/NiharikaNeha/flag-interpreter">View Source</a>
+            </div>
+        </li>
+
         <li>
             <div class="container-center margin">
                 <h1>english contraction translator</h1>
