--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,16 @@
 
     <ul class="lists-non-bullet">
 
+         <li>
+            <div class="container-center margin">
+                <h1>goodfoods</h1>
+                <small>July 2021</small>
+                <p>Checkout my favorite foods from my top 3 cuisines!!</p>
+                <a class="links links-primary" href="https://0qvwo.csb.app/">Live Project</a>
+                <a class="links links-secondary" href="https://codesandbox.io/s/github/NiharikaNeha/goodfoods">View Source</a>
+            </div>
+        </li>
+
         <li>
             <div class="container-center margin">
                 <h1>flag interpreter</h1>
