--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="section gray">
         <div>
             <h1>technologies</h1>
-            <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, Flutter, Java, C, Python</p>
+            <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, VanillaJS, ReactJS, Flutter, Java, C, Python</p>
         </div>
     </section>
 
