--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
 
     <footer class="footer">
-        <div class="footer-header">social media presence</div>
+        <div class="footer-header">connect with me</div>
         <ul class="footer-ul-links">
             <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha">github</a></li>
             <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharikatxt">twitter</a></li>
