--- a/blogs.html
+++ b/blogs.html
@@ -43,7 +43,7 @@
     </ul>
 
     <footer class="footer">
-        <div class="footer-header">social media presence</div>
+        <div class="footer-header">connect with me</div>
         <ul class="footer-ul-links">
             <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha">github</a></li>
             <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharikatxt">twitter</a></li>
