--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,17 @@
 
     <ul class="lists-non-bullet">
 
-         <li>
+        <li>
+            <div class="container-center margin">
+                <h1>cash register game</h1>
+                <small>July 2021</small>
+                <p>Checkout this cash register game where you get to know the minimum number of notes to return to the customer!!</p>
+                <a class="links links-primary" href="https://pcv73.csb.app/">Live Project</a>
+                <a class="links links-secondary" href="https://codesandbox.io/s/github/NiharikaNeha/cash-register-game">View Source</a>
+            </div>
+        </li>
+
+        <li>
             <div class="container-center margin">
                 <h1>goodfoods</h1>
                 <small>July 2021</small>
