lucky birthday game added

--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,16 @@
 
         <li>
             <div class="container-center margin">
+                <h1>lucky birthday game</h1>
+                <small>July 2021</small>
+                <p>Tell your friends if their birthdates are lucky or not with the help of this game!!!!</p>
+                <a class="links links-primary" href="https://ud50m.csb.app/">Live Project</a>
+                <a class="links links-secondary" href="https://codesandbox.io/s/github/NiharikaNeha/lucky-birthday-game">View Source</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container-center margin">
                 <h1>cash register game</h1>
                 <small>July 2021</small>
                 <p>Checkout this cash register game where you get to know the minimum number of notes to return to the customer!!</p>
