--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,16 @@
 
         <li>
             <div class="container-center margin">
+                <h1>fun with triangles</h1>
+                <small>August 2021</small>
+                <p>Do you know triangles enough? Check it out here !!!</p>
+                <a class="links links-primary" href="https://niharika-triangles.netlify.app/">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/fun-with-triangles">View Source</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container-center margin">
                 <h1>lucky birthday game</h1>
                 <small>July 2021</small>
                 <p>Tell your friends if their birthdates are lucky or not with the help of this game!!!!</p>
