palindrome birthday added

--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,16 @@
 
         <li>
             <div class="container-center margin">
+                <h1>palindrome birthday</h1>
+                <small>August 2021</small>
+                <p>Tell your friends if their birthday is palindrome or not and by how many days did they miss it !!</p>
+                <a class="links links-primary" href="https://t4k3p.csb.app/">Live Project</a>
+                <a class="links links-secondary" href="https://codesandbox.io/s/github/NiharikaNeha/birthday-palindrome">View Source</a>
+            </div>
+        </li>
+        
+        <li>
+            <div class="container-center margin">
                 <h1>fun with triangles</h1>
                 <small>August 2021</small>
                 <p>Do you know triangles enough? Check it out here !!!</p>
