--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="section gray">
         <div>
             <h1>technologies</h1>
-            <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, VanillaJS, ReactJS, Flutter, Java, C, Python</p>
+            <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, VanillaJS, ReactJS, Flutter, Java, C, Python.</p>
         </div>
     </section>
 
@@ -35,7 +35,7 @@
     <section class="section">
         <div>
             <h1>projects</h1>
-            <p>I like to showcase my work and thus, you can see my projects hosted online</p>
+            <p>I like to showcase my work and thus, you can see my projects hosted online.<br/><br/></p>
             <a class="links links-primary" href="/projects.html">see projects</a>
         </div>
     </section>
@@ -43,7 +43,7 @@
     <section class="section gray">
         <div>
             <h1>blogs</h1>
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.<br/><br/>
             </p>
         </div>
         <a class="links links-secondary" href="/blogs.html">read blogs</a>
