--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,16 @@
 
         <li>
             <div class="container-center margin">
+                <h1>profit loss game</h1>
+                <small>August 2021</small>
+                <p>Get to know the profit or loss the user is making both in percentage and absolute !! </p>
+                <a class="links links-primary" href="https://profit-loss-game.netlify.app/">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/profit-loss-game">View Source</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container-center margin">
                 <h1>palindrome birthday</h1>
                 <small>August 2021</small>
                 <p>Tell your friends if their birthday is palindrome or not and by how many days did they miss it !!</p>
