added hashnode dummy blog link

--- a/blogs.html
+++ b/blogs.html
@@ -37,7 +37,7 @@
                 <h1>dummy blog 1</h1>
                 <small>July 2021</small>
                 <p>This is a dummy blog.</p>
-                <a class="links links-primary" href="/dummyblog.html">Read More</a>
+                <a class="links links-primary" href="https://niharikakesarwani.hashnode.dev/hello-omronldrospackage">Read More</a>
             </div>
         </li>
     </ul>
