added links to blogs

--- a/blogs.html
+++ b/blogs.html
@@ -25,19 +25,19 @@
     <ul class="lists-non-bullet">
         <li>
             <div class=" container-center margin">
-                <h1>dummy blog 2</h1>
+                <h1>Unravelling the beauty of Kudremukh</h1>
                 <small>July 2021</small>
-                <p>This is a dummy blog.</p>
-                <a class="links links-primary" href="/dummyblog.html">Read More</a>
+                <p>My journey to finding my daring self amongst the verdant mountains...</p>
+                <a class="links links-primary" href="https://niharikakesarwani.hashnode.dev/unravelling-the-beauty-of-kudremukh">Read More</a>
             </div>
         </li>
 
         <li>
             <div class=" container-center margin">
-                <h1>dummy blog 1</h1>
+                <h1>The Gateway to Financial Freedom</h1>
                 <small>July 2021</small>
-                <p>This is a dummy blog.</p>
-                <a class="links links-primary" href="https://niharikakesarwani.hashnode.dev/hello-this-is-a-demo-blog-by-me">Read More</a>
+                <p>A guide for beginners to get started with personal finance...</p>
+                <a class="links links-primary" href="https://niharikakesarwani.hashnode.dev/the-gateway-to-financial-freedom">Read More</a>
             </div>
         </li>
     </ul>
