--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
                 <small>August 2021</small>
                 <p>Tell your friends if their birthday is palindrome or not and by how many days did they miss it !!</p>
                 <a class="links links-primary" href="https://t4k3p.csb.app/">Live Project</a>
-                <a class="links links-secondary" href="https://codesandbox.io/s/github/NiharikaNeha/birthday-palindrome">View Source</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/birthday-palindrome">View Source</a>
             </div>
         </li>
         
@@ -62,7 +62,7 @@
                 <small>July 2021</small>
                 <p>Tell your friends if their birthdates are lucky or not with the help of this game!!!!</p>
                 <a class="links links-primary" href="https://xs8dd.csb.app/">Live Project</a>
-                <a class="links links-secondary" href="https://codesandbox.io/s/github/NiharikaNeha/lucky-birthday-game">View Source</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/lucky-birthday-game">View Source</a>
             </div>
         </li>
 
@@ -72,7 +72,7 @@
                 <small>July 2021</small>
                 <p>Checkout this cash register game where you get to know the minimum number of notes to return to the customer!!</p>
                 <a class="links links-primary" href="https://0byyh.csb.app/">Live Project</a>
-                <a class="links links-secondary" href="https://codesandbox.io/s/github/NiharikaNeha/cash-register-game">View Source</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/cash-register-game">View Source</a>
             </div>
         </li>
 
@@ -82,7 +82,7 @@
                 <small>July 2021</small>
                 <p>Checkout my favorite foods from my top 3 cuisines!!</p>
                 <a class="links links-primary" href="https://0qvwo.csb.app/">Live Project</a>
-                <a class="links links-secondary" href="https://codesandbox.io/s/github/NiharikaNeha/goodfoods">View Source</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/goodfoods">View Source</a>
             </div>
         </li>
 
@@ -92,7 +92,7 @@
                 <small>July 2021</small>
                 <p>Use this application to identify some flags using their emojis.</p>
                 <a class="links links-primary" href="https://xyc9c.csb.app/">Live Project</a>
-                <a class="links links-secondary" href="https://codesandbox.io/s/github/NiharikaNeha/flag-interpreter">View Source</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/flag-interpreter">View Source</a>
             </div>
         </li>
 
@@ -141,9 +141,9 @@
     <footer class="footer">
         <div class="footer-header">connect with me</div>
         <ul class="footer-ul-links">
+            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani">linkedin</a></li>
             <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha">github</a></li>
             <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharikatxt">twitter</a></li>
-            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani">linkedin</a></li>
         </ul>
     </footer>
 </body>
