--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="section gray">
         <div>
             <h1>blogs</h1>
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.<br/><br/>
+            <p>I also write some technical and non techincal blogs. I like to document my journey of learning. Watch out some of my work below !!<br/><br/>
             </p>
         </div>
         <a class="links links-secondary" href="/blogs.html">read blogs</a>
@@ -53,9 +53,9 @@
     <footer class="footer">
         <div class="footer-header">connect with me</div>
         <ul class="footer-ul-links">
+            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani">linkedin</a></li>
             <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha">github</a></li>
             <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharikatxt">twitter</a></li>
-            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani">linkedin</a></li>
         </ul>
     </footer>
 
