--- a/projects.html
+++ b/projects.html
@@ -143,7 +143,7 @@
         <ul class="footer-ul-links">
             <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani">linkedin</a></li>
             <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha">github</a></li>
-            <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharikatxt">twitter</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharika_twt">twitter</a></li>
         </ul>
     </footer>
 </body>
