added target = _blank to links

--- a/blogs.html
+++ b/blogs.html
@@ -28,7 +28,7 @@
                 <h1>Unravelling the beauty of Kudremukh</h1>
                 <small>July 2021</small>
                 <p>My journey to finding my daring self amongst the verdant mountains...</p>
-                <a class="links links-primary" href="https://niharikakesarwani.hashnode.dev/unravelling-the-beauty-of-kudremukh">Read More</a>
+                <a class="links links-primary" href="https://niharikakesarwani.hashnode.dev/unravelling-the-beauty-of-kudremukh" target="_blank">Read More</a>
             </div>
         </li>
 
@@ -37,7 +37,7 @@
                 <h1>The Gateway to Financial Freedom</h1>
                 <small>July 2021</small>
                 <p>A guide for beginners to get started with personal finance...</p>
-                <a class="links links-primary" href="https://niharikakesarwani.hashnode.dev/the-gateway-to-financial-freedom">Read More</a>
+                <a class="links links-primary" href="https://niharikakesarwani.hashnode.dev/the-gateway-to-financial-freedom" target="_blank">Read More</a>
             </div>
         </li>
     </ul>
@@ -45,9 +45,9 @@
     <footer class="footer">
         <div class="footer-header">connect with me</div>
         <ul class="footer-ul-links">
-            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani">linkedin</a></li>
-            <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha">github</a></li>
-            <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharika_twt">twitter</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani" target="_blank">linkedin</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha" target="_blank">github</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharika_twt" target="_blank">twitter</a></li>
         </ul>
     </footer>
 </body>
