--- a/dummyblog.html
+++ b/dummyblog.html
@@ -61,24 +61,24 @@
     <h1>Comments?</h1>
     <p>I would love to get your likes/comments/thoughts on the social medium of your choice. If you want to comment on…</p>
 
-    <p>LinkedIn: <a class="links" href="https://linkedin.com">go to this linkedin post</a></p>
-    <p>Twitter: <a class="links" href="https://twitter.com">go to this twitter post</a></p>
+    <p>LinkedIn: <a class="links" href="https://linkedin.com" target="_blank">go to this linkedin post</a></p>
+    <p>Twitter: <a class="links" href="https://twitter.com" target="_blank">go to this twitter post</a></p>
 
     <hr>
 
-    <a class="links" href="/dummyblog.html"">← 3 simple tricks to make your webapp 3X faster!</a>
+    <a class="links" href="/dummyblog.html" target="_blank">← 3 simple tricks to make your webapp 3X faster!</a>
 
     <hr>
 
-    <p>Subsciribing would make it easy to stay connected. I don't spam.</p>
+    <p>Subscribing would make it easy to stay connected. I don't spam.</p>
 
     <hr>
 
     <div style="padding: 1rem 0rem"/>
 
-    <p>|<a class="links" href="https://twitter.com">twitter</a>|<a class="links" href="https://linkedin.com">linkedin</a>|<a class="links" href="https://github.com">github</a>|<a class="links" href="https://youtube.com">youtube</a>|<a class="links" href="https://instagram.com">instagram</a>|<a class="links" href="https://t.me/tanaypratap">telegram page for students</a>|<a class="links" href="https://bit.ly/tanaydiscord">discord server for students</a>|</p>
+    <p>|<a class="links" href="https://twitter.com" target="_blank">twitter</a>|<a class="links" href="https://linkedin.com" target="_blank">linkedin</a>|<a class="links" href="https://github.com" target="_blank">github</a>|<a class="links" href="https://youtube.com" target="_blank">youtube</a>|<a class="links" href="https://instagram.com" target="_blank">instagram</a>|<a class="links" href="https://t.me/tanaypratap" target="_blank">telegram page for students</a>|<a class="links" href="https://bit.ly/tanaydiscord" target="_blank">discord server for students</a>|</p>
 
-    <p style="position: absolute; bottom: 0; width:100%; text-align: left;">© 2021, Built with <a href="https://www.gatsbyjs.org/">Gatsby</a></p>
+    <p style="position: absolute; bottom: 0; width:100%; text-align: left;">© 2021, Built with <a href="https://www.gatsbyjs.org/" target="_blank">Gatsby</a></p>
     
 </body>
 
