--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <footer class="footer">
         <div class="footer-header">connect with me</div>
         <ul class="footer-ul-links">
-            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani">linkedin</a></li>
-            <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha">github</a></li>
-            <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharika_twt">twitter</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani" target="_blank">linkedin</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha" target="_blank">github</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharika_twt" target="_blank">twitter</a></li>
         </ul>
     </footer>
 
