--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,8 @@
                 <h1>profit loss game</h1>
                 <small>August 2021</small>
                 <p>Get to know the profit or loss the user is making both in percentage and absolute !! </p>
-                <a class="links links-primary" href="https://profit-loss-game.netlify.app/">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/profit-loss-game">View Source</a>
+                <a class="links links-primary" href="https://profit-loss-game.netlify.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/profit-loss-game" target="_blank">View Source</a>
             </div>
         </li>
 
@@ -41,8 +41,8 @@
                 <h1>palindrome birthday</h1>
                 <small>August 2021</small>
                 <p>Tell your friends if their birthday is palindrome or not and by how many days did they miss it !!</p>
-                <a class="links links-primary" href="https://t4k3p.csb.app/">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/birthday-palindrome">View Source</a>
+                <a class="links links-primary" href="https://t4k3p.csb.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/birthday-palindrome" target="_blank">View Source</a>
             </div>
         </li>
         
@@ -51,8 +51,8 @@
                 <h1>fun with triangles</h1>
                 <small>August 2021</small>
                 <p>Do you know triangles enough? Check it out here !!!</p>
-                <a class="links links-primary" href="https://niharika-triangles.netlify.app/">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/fun-with-triangles">View Source</a>
+                <a class="links links-primary" href="https://niharika-triangles.netlify.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/fun-with-triangles" target="_blank">View Source</a>
             </div>
         </li>
 
@@ -61,8 +61,8 @@
                 <h1>lucky birthday game</h1>
                 <small>July 2021</small>
                 <p>Tell your friends if their birthdates are lucky or not with the help of this game!!!!</p>
-                <a class="links links-primary" href="https://xs8dd.csb.app/">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/lucky-birthday-game">View Source</a>
+                <a class="links links-primary" href="https://xs8dd.csb.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/lucky-birthday-game" target="_blank">View Source</a>
             </div>
         </li>
 
@@ -71,8 +71,8 @@
                 <h1>cash register game</h1>
                 <small>July 2021</small>
                 <p>Checkout this cash register game where you get to know the minimum number of notes to return to the customer!!</p>
-                <a class="links links-primary" href="https://0byyh.csb.app/">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/cash-register-game">View Source</a>
+                <a class="links links-primary" href="https://0byyh.csb.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/cash-register-game" target="_blank">View Source</a>
             </div>
         </li>
 
@@ -81,8 +81,8 @@
                 <h1>goodfoods</h1>
                 <small>July 2021</small>
                 <p>Checkout my favorite foods from my top 3 cuisines!!</p>
-                <a class="links links-primary" href="https://0qvwo.csb.app/">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/goodfoods">View Source</a>
+                <a class="links links-primary" href="https://0qvwo.csb.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/goodfoods" target="_blank">View Source</a>
             </div>
         </li>
 
@@ -91,8 +91,8 @@
                 <h1>flag interpreter</h1>
                 <small>July 2021</small>
                 <p>Use this application to identify some flags using their emojis.</p>
-                <a class="links links-primary" href="https://xyc9c.csb.app/">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/flag-interpreter">View Source</a>
+                <a class="links links-primary" href="https://xyc9c.csb.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/flag-interpreter" target="_blank">View Source</a>
             </div>
         </li>
 
@@ -101,8 +101,8 @@
                 <h1>english contraction translator</h1>
                 <small>July 2021</small>
                 <p>Use the translator to translate the English contraction forms (can't, I'm etc) to the expanded forms.</p>
-                <a class="links links-primary" href="https://contraction-translator.netlify.app/">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/english-contraction-translator">View Source</a>
+                <a class="links links-primary" href="https://contraction-translator.netlify.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/english-contraction-translator" target="_blank">View Source</a>
             </div>
         </li>
     
@@ -111,8 +111,8 @@
                 <h1>minion language translator</h1>
                 <small>July 2021</small>
                 <p>Use the translator to convert your text from English to Minion/Banana language.</p>
-                <a class="links links-primary" href="https://banana-game.netlify.app">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/banana-game">View Source</a>
+                <a class="links links-primary" href="https://banana-game.netlify.app" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/banana-game" target="_blank">View Source</a>
             </div>
         </li>
 
@@ -121,8 +121,8 @@
                 <h1>are u a friends fan?</h1>
                 <small>July 2021</small>
                 <p>Are you a loyal <strong>friends</strong> fan? Let's play a quiz and see.</p>
-                <a class="links links-primary" href="https://replit.com/@Niharika2018/markTwo?embed=1&output=1">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/friends-quiz">View Source</a>
+                <a class="links links-primary" href="https://replit.com/@Niharika2018/markTwo?embed=1&output=1" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/friends-quiz" target="_blank">View Source</a>
             </div>
         </li>
 
@@ -132,8 +132,8 @@
                 <small>July 2021</small>
                 <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who
                     really knows you</p>
-                <a class="links links-primary" href="https://replit.com/@Niharika2018/markOne?embed=1&output=1">Live Project</a>
-                <a class="links links-secondary" href="https://github.com/NiharikaNeha/how-well-do-you-know-me">View Source</a>
+                <a class="links links-primary" href="https://replit.com/@Niharika2018/markOne?embed=1&output=1" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/how-well-do-you-know-me" target="_blank">View Source</a>
             </div>
         </li>
     </ul>
@@ -141,9 +141,9 @@
     <footer class="footer">
         <div class="footer-header">connect with me</div>
         <ul class="footer-ul-links">
-            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani">linkedin</a></li>
-            <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha">github</a></li>
-            <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharika_twt">twitter</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani" target="_blank">linkedin</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha" target="_blank">github</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharika_twt" target="_blank">twitter</a></li>
         </ul>
     </footer>
 </body>
