dicee challenge game added

--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,16 @@
 
         <li>
             <div class="container-center margin">
+                <h1>dicee challenge</h1>
+                <small>January 2023</small>
+                <p>Need help determining which option to choose out of the two? Use this to reach a bias-free conclusion!</p>
+                <a class="links links-primary" href="https://dicee-challenge-niharika.netlify.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/The-Complete-2023-Web-Development-Bootcamp/tree/diceChallenge" target="_blank">View Source</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container-center margin">
                 <h1>profit loss game</h1>
                 <small>August 2021</small>
                 <p>Get to know the profit or loss the user is making both in percentage and absolute !! </p>
