drum kit game added

--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,16 @@
 
         <li>
             <div class="container-center margin">
+                <h1>drum kit game</h1>
+                <small>February 2023</small>
+                <p>For every time you want to give a dramatic musical reaction!</p>
+                <a class="links links-primary" href="https://drum-kit-niharika.netlify.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/NiharikaNeha/The-Complete-2023-Web-Development-Bootcamp/tree/drumKit" target="_blank">View Source</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container-center margin">
                 <h1>dicee challenge</h1>
                 <small>January 2023</small>
                 <p>Need help determining which option to choose out of the two? Use this to reach a bias-free conclusion!</p>
