added console undefined blog

--- a/blogs.html
+++ b/blogs.html
@@ -25,6 +25,15 @@
     <ul class="lists-non-bullet">
         <li>
             <div class=" container-center margin">
+                <h1>Why does console.log() return 'undefined'?</h1>
+                <small>February 2023</small>
+                <p>Ever wondered what happens when your browser's console returns undefined upon execution? Read on to find out about it...</p>
+                <a class="links links-primary" href="https://niharikakesarwani.hashnode.dev/why-does-consolelog-return-undefined" target="_blank">Read More</a>
+            </div>
+        </li>
+
+        <li>
+            <div class=" container-center margin">
                 <h1>Unravelling the beauty of Kudremukh</h1>
                 <small>July 2021</small>
                 <p>My journey to finding my daring self amongst the verdant mountains...</p>
