updated github profile url

--- a/projects.html
+++ b/projects.html
@@ -172,7 +172,7 @@
         <div class="footer-header">connect with me</div>
         <ul class="footer-ul-links">
             <li class="lists-item-inline"><a class="footer-links" href="https://linkedin.com/in/niharika-kesarwani" target="_blank">linkedin</a></li>
-            <li class="lists-item-inline"><a class="footer-links" href="https://github.com/NiharikaNeha" target="_blank">github</a></li>
+            <li class="lists-item-inline"><a class="footer-links" href="https://github.com/niharika-kesarwani" target="_blank">github</a></li>
             <li class="lists-item-inline"><a class="footer-links" href="https://twitter.com/Niharika_twt" target="_blank">twitter</a></li>
         </ul>
     </footer>
