--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,16 @@
 
         <li>
             <div class="container-center margin">
+                <h1>readhaven</h1>
+                <small>May 2023</small>
+                <p>A books e-commerce website for all the book lovers! It has features like product listing, product details, cart management, wishlist management, and login-logout features that are required in an e-commerce app. </p>
+                <a class="links links-primary" href="https://readhaven.netlify.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/niharika-kesarwani/readhaven" target="_blank">View Source</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container-center margin">
                 <h1>simon game challenge</h1>
                 <small>February 2023</small>
                 <p>A classic game to test your memory power!</p>
