data: component library project added

--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,16 @@
 
         <li>
             <div class="container-center margin">
+                <h1>component library</h1>
+                <small>September 2023</small>
+                <p>A small app containing different components with their documentation in React JS!</p>
+                <a class="links links-primary" href="https://component-library-niharika.netlify.app/" target="_blank">Live Project</a>
+                <a class="links links-secondary" href="https://github.com/niharika-kesarwani/component-library" target="_blank">View Source</a>
+            </div>
+        </li>
+
+        <li>
+            <div class="container-center margin">
                 <h1>sociohaven</h1>
                 <small>June 2023</small>
                 <p>A social media website where you can connect with your friends!</p>
